frontend/test/should_pass/pattern_007.grg
pattern Foo
{
	x: Node;
	
	replace
	{
	}
}

rule r
{
	foo:Foo();

	replace
	{
		foo();
	}
}