frontend/test/should_fail/basic_010.grg
rule r(x:Node) {
  replace {
    x:Node;
  }
}
